--- a/task1/package.json
+++ b/task1/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node task1.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Salman Niyazi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
